--- a/config.properties
+++ b/config.properties
@@ -9,6 +9,6 @@ dest.db.username=root
 dest.db.password=
 
 # Log database connection properties
-log.db.url=jdbc:mysql://localhost:3306/control_db
+log.db.url=jdbc:mysql://localhost:3306/control
 log.db.username=root
 log.db.password=
